crates/aion-awl/tests/fixtures/rev2/loop-outcomes/invalid/loop_step_no_outcomes.awl
//! A loop's exhaustion has no name — the step declares no outcome clauses at all.
workflow poll_job
  input job_id: String
  input max_polls: Int

  outcome finished: type Finished, route success

type Poll     { state: String, done: Bool }
type Finished { job_id: String, polls: Int }

worker poller
  action poll(job_id: String, prior: Poll) -> Poll
    node shell, timeout 1m

step poll
  loop status = Poll(state: "pending", done: false) counting polls
    poll(job_id: job_id, prior: status) -> status
    until status.done
    max max_polls

step report
  route finished(job_id: job_id, polls: polls)
